# safedrive-sdk

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  SafeDriveSDK.sln  appveyor.yml  build.rs  check-xp.sh  debug.sh  dep.cmd  dep.sh  libressl-musl.patch  release.cmd  release.sh  rsync-exit-with-parent-rsync-h.patch  rustver.bat  rustver.conf  rustver.sh  sddk32.vcxproj  sddk32.vcxproj.filters  sddk64.vcxproj  sddk64.vcxproj.filters  test.sh  unit.cmd  unit.sh  update-version.sh  v120_xp.bat  v120_xp64.bat  v140_xp.bat  v140_xp64.bat  v141_xp.bat  v141_xp64.bat  vista.api
.cargo/: config
Components/: Info.plist
Mac/: Constants.swift  Errors.swift  Models.swift  SafeDriveSDK.swift  Util.swift  module.map
Mac/Supporting Files/: Info.plist  module.map
Mac/Tests/: Info.plist
Mac/Tests/Supporting Files/: Info.plist
SafeDriveSDK.xcodeproj/: project.pbxproj
SafeDriveSDK.xcodeproj/xcshareddata/xcschemes/: SafeDriveSDK.xcscheme  SafeDriveSDKTests.xcscheme
Swift/: Info.plist
Windows/: AccountDetails.cpp  AccountStatus.cpp  CMakeLists.txt  Folder.cpp  SDKException.cpp  SafeDriveSDK-old.hpp  SafeDriveSDK.cpp  SafeDriveSDK.h  SafeDriveSDK.vcxproj  SafeDriveSDK.vcxproj.filters  SoftwareClient.cpp  SyncSession.cpp  stdafx.cpp  stdafx.h  targetver.h  test-old.cpp  test.cpp  test.h
Windows/SafeDriveSDK/: AccountDetails.cpp  AccountStatus.cpp  SafeDriveSDK.cpp  SafeDriveSDK.h  SafeDriveSDK.vcxproj  SafeDriveSDK.vcxproj.filters  stdafx.h
Windows/test/: stdafx.h  targetver.h  test.cpp  test.vcxproj  test.vcxproj.filters
Wrappers/C++/: SafeDriveSDK.cpp
Wrappers/Swift/: Constants.swift  Info.plist  SafeDriveSDK.swift  module.map
Wrappers/Swift/Tests/: Info.plist  SafeDriveSDKTests.swift
askpass/: Cargo.toml
askpass/src/: main.rs
builder/: Cargo.toml
builder/patches/: always-askpass.patch  libressl-musl.patch  rsync-exit-with-parent.patch
builder/src/: cargo.rs  cmake.rs  configuration.rs  dependency.rs  dir.rs  error.rs  library.rs  main.rs  msbuild.rs  platform.rs  runtime.rs  toolset.rs  vc.rs
ci/: before_deploy.cmd  before_deploy.sh  env.cmd  install.cmd  install.sh  utils.sh
dep-i686-pc-windows-msvc-v120-dll/lib/: libsodium.exp  libsodium.lib  sodium.def  sqlite3.exp  sqlite3.lib
dep-i686-pc-windows-msvc-v120-mt/lib/: sqlite3.lib
dep-i686-pc-windows-msvc-v120/lib/: sqlite3.lib
dep-i686-pc-windows-msvc-v140-dll/lib/: libsodium.exp  libsodium.lib  sodium.exp  sqlite3.exp  sqlite3.lib
dep-static/x86_64-apple-darwin/: io.safedrive.SafeDrive.sshfs
dep-win-x64-vs2013/lib/: sodium.lib
dep-win-x64-vs2015/lib/: sqlite3.lib
dep-win-x86-vs2013/lib/: sodium.lib
dep-win-x86-vs2015/lib/: sqlite3.lib
dep-win64-vs2015/lib/: sodium.lib
dep-x86_64-pc-windows-msvc-v120-dll/lib/: libsodium.exp  libsodium.lib  sqlite3.exp  sqlite3.lib
dep-x86_64-pc-windows-msvc-v120/lib/: sqlite3.lib
dep-x86_64-pc-windows-msvc-v140-dll/lib/: libsodium.exp  sodium.lib  sqlite3.exp  sqlite3.lib
dep/i686-pc-windows-msvc/v120/dll/lib/: libsodium.exp  sodium.exp  sodium.lib
dep/i686-pc-windows-msvc/v140/dll/lib/: libsodium.exp  sodium.lib
dep/i686-pc-windows-msvc/v140/mt/lib/: libsodium.lib
dep/i686-pc-windows-msvc/v141/dll/lib/: libsodium.exp  libsodium.lib
dep/i686-pc-windows-msvc/v141/mt/lib/: sodium.lib
dep/x86_64-pc-windows-msvc/v120/dll/lib/: libsodium.lib  sodium.exp  sodium.lib
dep/x86_64-pc-windows-msvc/v120/mt/lib/: sodium.lib
dep/x86_64-pc-windows-msvc/v140/dll/lib/: sodium.exp
dep/x86_64-pc-windows-msvc/v140/mt/lib/: sodium.lib
dep/x86_64-pc-windows-msvc/v141/dll/lib/: sodium.exp
dep/x86_64-pc-windows-msvc/v141/mt/lib/: sodium.lib
libsafedrive/: Cargo.toml  build.rs
libsafedrive/src/: binformat.rs  block.rs  c_api.rs  cache.rs  chunk.rs  constants.rs  context.rs  core.rs  error.rs  keychain.rs  keys.rs  lib.rs  localized.rs  lock.rs  models.rs  oplog.rs  sdapi.rs  sdlog.rs  session.rs  sessionfs.rs  state.rs  test.c  util.rs
safedrive/: Cargo.toml  build.rs
safedrive/src/: main.rs
safedrived/: Cargo.toml  build.rs
safedrived/src/: main.rs
sddk/: Cargo.toml  build.rs
sddk/src/: binformat.rs  block.rs  c_api.rs  cache.rs  chunk.rs  constants.rs  core.rs  error.rs  keychain.rs  keys.rs  lib.rs  lock.rs  models.rs  oplog.rs  remotefs.rs  restore.rs  sdapi.rs  sdlog.rs  session.rs  sessionfs.rs  settings.rs  state.rs  sync.rs  sync_state.rs  util.rs  webui.rs
src/: c_api.rs  constants.rs  context.rs  core.rs  error.rs  lib.rs  main.rs  models.rs  sdapi.rs  test.c  util.rs
