[workspace]
members = ["builder", "sddk", "safedrive", "askpass"]

[profile.release]
debug = true

[replace]
"security-framework:0.1.14" = { git = "https://github.com/infincia/rust-security-framework.git", branch = "infincia" }
"security-framework-sys:0.1.14" = { git = "https://github.com/infincia/rust-security-framework.git", branch = "infincia" }
"rustls:0.9.0" = { git = "https://github.com/infincia/rustls.git", branch = "infincia" }
