[package]
name = "libsafedrive"
version = "0.4.0"
authors = ["Stephen Oliver <steve@infincia.com>"]
build = "build.rs"
workspace = ".."

[dependencies]
sodiumoxide = "*"
libsodium-sys = "*"
libc = "*"
walkdir = "*"
cdc = "*"
tar = "*"
rustc-serialize = "*"
reqwest = "*"
hyper = { version = "*" , default-features = false }
serde = "^0.9"
serde_json = "^0.9"
serde_derive = "^0.9"
bip39 = "*"
rand = "*"
log = "*"
nom = { version = "*", features= ["verbose-errors"] }
lazy_static = "^0.1.*"
uuid = { version = "*", features = ["v4"] }
regex = "^0.2"
scopeguard = "*"
parking_lot = "*"
byteorder = "*"
blake2-rfc = { version = "*" }
#blake2-rfc = { version = "*", features = ["simd", "simd_opt", "simd_asm"] }
bitflags = "^0.8"
semver = "^0.6.0"
lz4 = "*"
chrono = "*"
number_prefix = "*"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = "*"
secret-service = { version = "^0.2.0", optional = true }


[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "*", features = ["exception"] }
objc-foundation = "*"
interfaces = "*"
security-framework = { version = "*", optional = true }


[build-dependencies]
rusty-cheddar = "*"

[lib]
name = "safedrive"
crate-type = ["lib", "staticlib", "cdylib"]
doctest = false

[features]
default = []

locking = []
keychain = []
mac-keychain = ["security-framework"]
linux-keychain = ["secret-service"]
windows-keychain = []