[package]
name = "libsafedrive"
version = "0.5.13"
authors = ["Stephen Oliver <steve@infincia.com>"]
build = "build.rs"
workspace = ".."

[dependencies]
sodiumoxide = "*"
libsodium-sys = "*"
libc = "*"
walkdir = "*"
cdc = "*"
tar = { version = "*", git = "https://github.com/infincia/tar-rs.git", branch = "append_long_name" }
rustc-serialize = "*"
reqwest = { version = "*", git = "https://github.com/infincia/reqwest.git", branch = "rustls"  }
hyper = { version = "*" , default-features = false }
serde = "^0.9"
serde_json = "^0.9"
serde_derive = "^0.9"
bip39 = "*"
rand = "*"
log = "*"
nom = { version = "*", features= ["verbose-errors"] }
lazy_static = "^0.1.*"
uuid = { version = "*", features = ["v4"] }
regex = "^0.2"
scopeguard = { version = "*", optional = true }
parking_lot = "*"
byteorder = "*"
blake2-rfc = { version = "*" }
#blake2-rfc = { version = "*", features = ["simd", "simd_opt", "simd_asm"] }
bitflags = "^0.8"
semver = "^0.6.0"
lz4 = "*"
chrono = "*"
number_prefix = "*"
keyring = { version = "*", optional = true, git = "https://github.com/infincia/keyring-rs.git", branch = "infincia"  }
fuse_mt = { version = "*", optional = true }
time = "*"

[replace]
"ring:0.7.2" = { git = "https://github.com/infincia/ring.git", branch = "infincia", default-features = false, features = ["use_heap", "dev_urandom_fallback"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "*", features = ["exception"] }
objc-foundation = "*"

[lib]
name = "safedrive"
crate-type = ["lib", "staticlib", "cdylib"]
doctest = false

[features]
default = ["keychain"]

locking = ["scopeguard"]
keychain = ["keyring"]
sessionfs = ["fuse_mt"]
