[package]
name = "libsafedrive"
version = "0.6.13"
authors = ["Stephen Oliver <steve@infincia.com>"]
build = "build.rs"
workspace = ".."

[dependencies]
sodiumoxide = "*"
libsodium-sys = "*"
libc = "*"
walkdir = "*"
cdc = "*"
tar = { version = "*", git = "https://github.com/infincia/tar-rs.git", branch = "append_long_name" }
rustc-serialize = "*"
reqwest = { version = "*", git = "https://github.com/infincia/reqwest.git", branch = "rustls"  }
hyper = { version = "*" , default-features = false }
serde = "^0.9"
serde_json = "^0.9"
serde_derive = "^0.9"
bip39 = "*"
rand = "*"
log = "*"
simplelog = "*"
nom = { version = "*", features= ["verbose-errors"] }
lazy_static = "^0.1.*"
uuid = { version = "*", features = ["v4"] }
regex = "^0.2"
scopeguard = { version = "*", optional = true }
parking_lot = "*"
byteorder = "*"
blake2-rfc = { version = "*" }
#blake2-rfc = { version = "*", features = ["simd", "simd_opt", "simd_asm"] }
bitflags = "^0.8"
semver = "^0.6.0"
lz4 = "*"
chrono = "*"
chrono-humanize = "*"
number_prefix = "*"
keyring = { version = "*", git = "https://github.com/infincia/keyring-rs.git", branch = "infincia"  }
fuse_mt = { version = "*", optional = true }
time = "*"
reed-solomon = "*"

clippy = { version = "*", optional = true }

rocket = { version = "*", optional = true }
rocket_codegen = { version = "*", optional = true }
rocket_contrib = { version = "*", optional = true }
tera = { version = "^0.9", optional = true }
pulldown-cmark = { version = "0.0.8", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "*", features = ["exception"] }
objc-foundation = "*"

[lib]
name = "safedrive"
crate-type = ["rlib", "cdylib"]
doctest = false

[features]
default = []

locking = ["scopeguard"]
sessionfs = ["fuse_mt"]
lint = ["clippy"]
webui = ["rocket", "rocket_codegen", "rocket_contrib", "tera", "pulldown-cmark"]
