[package]
name = "safedrive"
version = "0.4.8"
authors = ["Stephen Oliver <steve@infincia.com>"]
build = "build.rs"
workspace = ".."

[dependencies]
clap = "*"
pbr = { git = "https://github.com/infincia/pb.git", branch = "logging" }
rpassword = "*"
uuid = { version = "*", features = ["v4"] }
serde = "^0.9"
serde_json = "^0.9"
serde_derive = "^0.9"
log = "*"
prettytable-rs = "*"
chrono = "^0.3"
simplelog = "*"

[dependencies.libsafedrive]
path = "../libsafedrive"

[features]
default = []

keychain = []