[package]
name = "safedrive"
version = "0.6.13"
authors = ["Stephen Oliver <steve@infincia.com>"]
build = "build.rs"
workspace = ".."

[dependencies]
clap = "*"
pbr = { git = "https://github.com/infincia/pb.git", branch = "infincia" }
rpassword = "0.4"
uuid = { version = "*", features = ["v4"] }
serde = "^0.9"
serde_json = "^0.9"
serde_derive = "^0.9"
log = "*"
prettytable-rs = "*"
chrono = "^0.3"

[dependencies.libsafedrive]
path = "../libsafedrive"


[features]
default = []
sessionfs = []