[package]
name = "safedrive"
version = "0.7.7"
authors = ["Stephen Oliver <steve@infincia.com>"]
build = "build.rs"
workspace = ".."

[dependencies]
clap = "*"
pbr = { git = "https://github.com/infincia/pb.git", branch = "infincia" }
rpassword = "0.4"
uuid = { version = "*", features = ["v4"] }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
log = "*"
prettytable-rs = "*"
chrono = "^0.4"
libc = "*"

[dependencies.sddk]
path = "../sddk"


[features]
default = []
sessionfs = []