[package]
name = "safedrived"
version = "0.6.15"
authors = ["Stephen Oliver <steve@infincia.com>"]
build = "build.rs"
workspace = ".."

[dependencies]
clap = "*"
serde = "^0.9"
serde_json = "^0.9"
serde_derive = "^0.9"
log = "*"
prettytable-rs = "*"
simplelog = "*"
notify = "*"

[dependencies.sddk]
path = "../sddk"