[package]
name = "safedrived"
version = "0.7.5"
authors = ["Stephen Oliver <steve@infincia.com>"]
build = "build.rs"
workspace = ".."

[dependencies]
clap = "*"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
log = "*"
prettytable-rs = "*"
simplelog = "*"
notify = "*"

[dependencies.sddk]
path = "../sddk"