[package]
name = "sddk"
version = "0.7.7"
authors = ["Stephen Oliver <steve@infincia.com>"]
build = "build.rs"
workspace = ".."

[dependencies]
sodiumoxide = "*"
libsodium-sys = "*"
libc = "*"
walkdir = "*"
cdc = "*"
tar = "*"
rustc-serialize = "*"
#reqwest = "^0.6"
reqwest = { version = "*", git = "https://github.com/infincia/reqwest.git", branch = "infincia"  }
hyper = { version = "^0.10" , default-features = false }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
bip39 = "*"
rand = "*"
log = "*"
simplelog = "*"
nom = { version = "*", features= ["verbose-errors"] }
lazy_static = "^0.1.*"
uuid = { version = "*", features = ["v4"] }
regex = "^0.2"
scopeguard = { version = "*", optional = true }
parking_lot = "^0.4"
parking_lot_mpsc = "^0.1"
byteorder = "*"
blake2-rfc = { version = "*" }
#blake2-rfc = { version = "*", features = ["simd", "simd_opt", "simd_asm"] }
bitflags = "^0.8"
semver = "^0.6.0"
lz4 = "*"
chrono = "0.4.0"
chrono-humanize = "*"
number_prefix = "*"
keyring = { version = "*", git = "https://github.com/infincia/keyring-rs.git", branch = "infincia"  }
fuse_mt = { version = "*", optional = true }
time = "*"
reed-solomon = "*"
ssh2 = "*"

clippy = { version = "*", optional = true }

rocket = { version = "*", optional = true }
rocket_codegen = { version = "*", optional = true }
rocket_contrib = { version = "*", optional = true }
tera = { version = "*", optional = true }
pulldown-cmark = { version = "0.0.8", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "*", features = ["exception"] }
objc-foundation = "*"

[build-dependencies]
moz-cheddar = "*"

[lib]
name = "sddk"
crate-type = ["rlib", "cdylib"]
doctest = false

[features]
default = []

locking = ["scopeguard"]
sessionfs = ["fuse_mt"]
lint = ["clippy"]
webui = ["rocket", "rocket_codegen", "rocket_contrib", "tera", "pulldown-cmark"]
